--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -3,7 +3,7 @@ server {
     listen 0.0.0.0:80;
     server_name localhost;
     index index.php index.html;
-    root /var/www/html/public;
+    root /var/www/html/Public;
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
