--- a/src/composer.json
+++ b/src/composer.json
@@ -11,5 +11,8 @@
           "App\\": "./"
         }
     },
-    "require": {}
+    "require": {
+    "vlucas/phpdotenv": "^5.4",
+      "ext-pdo": "*"
+    }
 }
